refactor: remove server database
